--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -6,13 +6,53 @@
   <body>
     <%- include("../partials/nav") %>
 
-    <div class="searchBar-container">
-      <form id="searchForm" name="searchForm" action="/music/search">
-        <input type="text" id="searchBar" name="search" />
-        <button type="submit" id="searchBtn">Search</button>
-      </form>
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="display-4">Hello, world!</h1>
+        <p class="lead">
+          This is a simple hero unit, a simple jumbotron-style component for
+          calling extra attention to featured content or information.
+        </p>
+        <hr class="my-4" />
+        <form
+          class="form-inline my-2 my-lg-0"
+          id="searchForm"
+          name="searchForm"
+          action="/musics/search"
+        >
+          <div class="input-group input-group-lg">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">
+                <svg
+                  viewBox="0 0 20 20"
+                  class="mui-icon mui-icon--search mui-icon--lg search_icon"
+                  title="search"
+                  style="width: 1em"
+                  fill="#f63"
+                >
+                  <path
+                    d="M18.8 17.6l-4.7-4.6c1-1.3 1.6-2.9 1.6-4.6 0-4.1-3.3-7.4-7.4-7.4-4 0-7.3 3.3-7.3 7.4s3.3 7.4 7.4 7.4c1.7 0 3.3-0.6 4.6-1.6l4.6 4.6c0.2 0.2 0.4 0.2 0.6 0.2s0.4-0.1 0.6-0.2c0.3-0.4 0.3-0.9 0-1.2zM8.4 14.1c-3.2 0-5.7-2.6-5.7-5.7s2.6-5.7 5.7-5.7c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7z"
+                  ></path>
+                </svg>
+              </span>
+            </div>
+            <input
+              class="form-control"
+              type="text"
+              placeholder="Type song title, artist or lyrics"
+              name="search"
+              id="searchBar"
+            />
+          </div>
+        </form>
+      </div>
 
-      <form id="feelingsChkForm" name="feelingsChkForm" action=""></form>
+      <!-- prettier-ignore -->
+      <% if(cookies.userData) { %>
+      <form id="feelingsChkForm" name="feelingsChkForm" action="">
+        아이고난!
+      </form>
+      <% } %>
     </div>
   </body>
 </html>
