--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -33,7 +33,7 @@
 />
 
 <!-- my css -->
-<link rel="stylesheet" href="/public/css/master.css" />
+<link rel="stylesheet" href="/css/master.css" />
 
 <!-- my js -->
 <script src="/js/script.js"></script>
