--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <!-- views/partials/nav.ejs -->
 
-<nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-5">
   <div class="container">
     <div class="navbar-brand">Feelings</div>
     <button
@@ -15,11 +15,41 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
       </ul>
+      <form
+        class="form-inline my-2 my-lg-0"
+        id="searchForm"
+        name="searchForm"
+        action="/musics/search"
+      >
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1">
+              <svg
+                viewBox="0 0 20 20"
+                class="mui-icon mui-icon--search mui-icon--lg search_icon"
+                title="search"
+                style="width: 1em"
+              >
+                <path
+                  d="M18.8 17.6l-4.7-4.6c1-1.3 1.6-2.9 1.6-4.6 0-4.1-3.3-7.4-7.4-7.4-4 0-7.3 3.3-7.3 7.4s3.3 7.4 7.4 7.4c1.7 0 3.3-0.6 4.6-1.6l4.6 4.6c0.2 0.2 0.4 0.2 0.6 0.2s0.4-0.1 0.6-0.2c0.3-0.4 0.3-0.9 0-1.2zM8.4 14.1c-3.2 0-5.7-2.6-5.7-5.7s2.6-5.7 5.7-5.7c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7z"
+                ></path>
+              </svg>
+            </span>
+          </div>
+          <input
+            class="form-control"
+            type="text"
+            placeholder="Type song title, artist or lyrics"
+            name="search"
+            id="navSearchBar"
+          />
+        </div>
+      </form>
       <ul class="navbar-nav ml-auto">
-        <% if(currentUser) { %>
+        <% if(cookies.userData) { %>
         <li class="nav-item">
-          <a href="/users/<%= currentUser.username %>" class="nav-link">
-            <%= currentUser.username %>
+          <a href="/users/<%= cookies.userData.username %>" class="nav-link">
+            <%= cookies.userData.username %>
           </a>
         </li>
         <li class="nav-item">
@@ -37,3 +67,4 @@
     </div>
   </div>
 </nav>
+<br />
