--- a/views/musics/search.ejs
+++ b/views/musics/search.ejs
@@ -29,7 +29,8 @@
       %>
         <li class="list-group-item">
           <h4 class="track-name">
-            <a href="/musics/lyrics/<%=element.track.commontrack_id %>"
+            <a
+              href="/musics/lyrics/<%=element.track.commontrack_id %>/<%=element.track.album_id %>"
               ><%= element.track.track_name %>
             </a>
           </h4>
@@ -42,7 +43,8 @@
       %>
         <li class="list-group-item">
           <h4 class="track-name">
-            <a href="/musics/lyrics/<%=element.track.commontrack_id %>"
+            <a
+              href="/musics/lyrics/<%=element.track.commontrack_id %>/<%=element.track.album_id %>"
               ><%= element.track.track_name %>
             </a>
           </h4>
